# ozma

./: .aiderignore  .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Cargo.toml  Cargo.toml** (root workspace)  Cross.toml  Dockerfile  Makefile  README.md  SECURITY.md  TRUST.md  build.rs  docker-compose.yml  install.sh  logo-wordmark-options.html  pytest.ini
agent/: app_monitor.py  backup.py  chassis_db.py  cli.py  display_geometry.rs  hardware_info.py  hardware_info.rs  hid_injector.rs  install-windows.ps1  install.ps1  install.sh  ozma_agent.py  ozma_desktop_agent.py  pipewire_audio.rs  prometheus_metrics.py  pyproject.toml  run-windows.bat  screen_capture.py  service.py  setup.py  storage_admin.py  storage_manager.py  tray.py  ui_hints.py
agent/chassis_models/: dell.yaml  hp.yaml  nas.yaml  supermicro.yaml
agent/installer/: build-windows.ps1  build.sh  ozma-agent.nsi  ozma-agent.spec
agent/multiseat/: __init__.py  audio_backend.py  audio_linux.py  audio_windows.py  capture_windows.py  display_backend.py  display_linux.py  display_windows.py  encoder_allocator.py  game_launcher.py  gpu_inventory.py  hotplug.py  input_linux.py  input_router.py  input_windows.py  isolation.py  monitoring.py  seat.py  seat_manager.py  seat_profiles.py  usb_topology.py  virtual_display.py  webrtc_seat.py
controller/: README.md  accessibility.py  agent_engine.py  alerts.py  api.py  audio.py  audio_intelligence.py  audio_outputs.py  audit_log.py  auth.py  auto_configure.py  auto_documentation.py  automation.py  backup_status.py  bluetooth.py  broadcast.py  build_info.py  camera_advisor.py  camera_connect.py  camera_manager.py  camera_recording.py  clipboard_ring.py  cloud_backup.py  codec_manager.py  compliance_reports.py  config.py  connect.py  controls.py  controls.yaml.example  ddns.py  device_metrics.py  discovery.py  discovery_engine.py  discovery_probes.py  display_capture.py  display_topology.py  dlp.py  dns_filter.py  dns_verify.py  doorbell.py  (+118 more)
controller/gaming/: README.md  __init__.py  app_containers.py  capture_to_moonlight.py  gstreamer_pipeline.py  headless_wayland.py  hybrid_streaming.py  moonlight_app_mapping.py  moonlight_input.py  moonlight_pairing.py  moonlight_protocol.py  moonlight_rtsp.py  moonlight_server.py  multi_user_streaming.py  per_app_state.py  profiles.py  scenario_app_mapping.py  virtual_audio.py  virtual_input.py  wolf_ui.py
controller/gql/: __init__.py  subscriptions.py
controller/graphql/: __init__.py  dispatcher.py  schema.py  subscriptions.py  types.py
controller/graphql_api/: schema.py
controller/integrations/: cameras.py  google_workspace.py  media.py  msgraph.py  nas.py  proxmox.py  slack_reader.py  smarthome.py
controller/messaging_channels/: base.py  connect_chat.py  discord_ch.py  email.py  slack.py  telegram_ch.py
controller/net_integrations/: __init__.py  base.py  mikrotik.py
controller/routing/: __init__.py  binding.py  binding_loop.py  builder.py  formats.py  graph.py  intent.py  measurement.py  measurement_engine.py  model.py  monitoring.py  pipeline.py  pipeline_cache.py  router.py  transport_plugin.py
controller/scripts/: generate_ota_key.py  sign_release.py
controller/static/: console.html  dashboard.html  desk3d.html  index.html  terminal.html
controller/tests/: README.md  inject_input.py  virtual_node.py
controller/ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
controller/wireplumber/: 51-ozma.conf  install.sh  ozma-routing.lua
node/usb_hid_rs/: Cargo.toml
ozma-agent/: Cargo.toml
ozma-agent-ui/: Cargo.toml
ozma-agent-ui/src/: app.rs  assets.rs  autostart.rs  client.rs  config.rs  main.rs  settings.rs  status.rs  tray.rs
ozma-agent/installer/: build-windows.ps1  build.sh
ozma-agent/src/: api.rs  approvals.rs  capture.rs  client.rs  ipc_server.rs  lib.rs  main.rs  mesh.rs  metrics.rs  register.rs  relay.rs
ozma-agent/tests/: e2e.rs
ozma-agent/wix/: license.rtf  main.wxs
ozma-clipboard/: Cargo.toml
ozma-clipboard/src/: ipc.rs  lib.rs  main.rs  ring.rs
ozma-clipboard/tests/: integration_test.rs
ozma-crypto/: Cargo.toml
ozma-crypto/kat/: generate_kat.py
ozma-crypto/src/: kdf.rs  keys.rs  lib.rs  packet.rs  replay.rs  session.rs  tests.rs
ozma-drivers/: Cargo.toml
ozma-drivers/src/: control_surface.rs  evdev_capture.rs  evdev_surface.rs  ipc.rs  keyboard.rs  lib.rs  main.rs  midi.rs  mouse.rs  streamdeck.rs  surface.rs  uinput.rs
ozma-drivers/tests/: gamepad_uinput.rs
ozma-hid/: Cargo.toml
ozma-hid/src/: hid_report.rs  injector.rs  layout.rs  lib.rs  paste_typing.rs
ozma-hid/tests/: inject_test.rs
ozma-mesh/: Cargo.toml
ozma-mesh/src/: error.rs  keys.rs  lib.rs  manager.rs  mdns.rs  node.rs  tunnel.rs  wg.rs
ozma-mesh/tests/: integration.rs  integration_test.rs  integration_tunnel.rs
ozma-node/: Cargo.toml
ozma-node/src/: capture.rs  hotplug.rs  lib.rs  main.rs  mdns.rs  registration.rs  serve.rs  usb_audio.rs  v4l_enum.rs
ozma-node/systemd/: ozma-node.service
ozma-node/tests/: capture_loopback.rs  test_capture.rs
ozma-pipewire/: Cargo.toml
ozma-pipewire/src/: cpal_backend.rs  lib.rs  pipewire_backend.rs  types.rs
ozma-pipewire/tests/: integration_test.rs
ozma-proto/: Cargo.toml
ozma-proto/src/: hid.rs  keycodes.rs  lib.rs  vban.rs  wire.rs
ozma-softnode/: Cargo.toml
ozma-softnode/src/: agent.rs  ipc.rs  main.rs  manager.rs  meeting_detect.rs  (+3 more)
softnode/: README.md  README_SOFTNODE.md  connect_client.py  dbus_display.py  desktop_node.py  evdev_create.py  evdev_input.py  evdev_service.py  gst_webrtc.py  gst_webrtc_worker.py  hid_to_qmp.py  hyperv_node.py  libvirt_power.py  looking_glass.py  meeting_detect.py  mesh_interface.py  pyproject.toml  qemu_display.py  qmp_client.py  screen_capture.py  setup.py  soft_node.py  usb_mass_storage.py  virtual_capture.py  virtual_media.py  virtual_node.py  virtual_usb.py  wallpaper.py  webrtc_audio.py  webrtc_stream.py
softnode-qmp/: Cargo.toml
(+529 files in other folders)
