[workspace]
resolver = "2"
members = [
    "ozma-node",
    "ozma-softnode",
    "ozma-agent",
    "ozma-drivers",
    "ozma-proto",
    "ozma-mesh",
    "ozma-crypto",
    "ozma-hid",
    "ozma-clipboard",
    "ozma-pipewire",
    "ozma-agent-ui",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
thiserror   = "1"
bytes       = "1"
clap        = { version = "4.0", features = ["derive", "env"] }
uuid        = { version = "1.0", features = ["v4"] }
axum        = { version = "0.7", features = ["json"] }
prometheus  = { version = "0.13", features = ["process"] }
alsa        = "0.9"
usb-gadget  = "0.5"
async-trait = "0.1"
libc        = "0.2"
