[package]
name = "ozma-agent-ui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Ozma Agent UI — egui-based tray and status window"

[dependencies]
# UI framework
eframe = "0.29"
egui = "0.29"

# HTTP client for status polling
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime (workspace provides tokio)
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
embed-fonts = []

[profile.release]
strip = true
lto = true
codegen-units = 1
