[package]
name = "ozma-agent-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui         = "0.29"
eframe       = { version = "0.29", features = ["persistence"] }
tray-icon    = "0.14"
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
dirs         = "5"
anyhow        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
ozma-proto   = { path = "../ozma-proto" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
