[package]
name        = "ozma-clipboard"
version     = "0.1.0"
edition     = "2021"
description = "Cross-platform clipboard access for the Ozma agent (arboard)"
license     = "AGPL-3.0-only"

[[bin]]
name = "ozma-clipboard"
path = "src/main.rs"

[lib]
name = "ozma_clipboard"
path = "src/lib.rs"

[dependencies]
# Cross-platform clipboard (1Password's arboard)
arboard        = { version = "3", features = ["image-data"] }

# Async runtime
tokio          = { version = "1", features = ["full"] }

# Serialisation
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Image encode/decode for PNG clipboard payloads
image          = { version = "0.25", default-features = false, features = ["png"] }

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Byte helpers
base64         = "0.22"

# Platform: wl-clipboard fallback detection
[target.'cfg(target_os = "linux")'.dependencies]
which          = "6"

[dev-dependencies]
tokio          = { version = "1", features = ["full", "test-util"] }
tempfile       = "3"
