[package]
name    = "ozma-drivers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ozma-drivers"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
uuid               = { version = "1", features = ["v4"] }
anyhow             = "1"
elgato-streamdeck  = "0.5"
hidapi             = { version = "2", features = ["linux-static-hidraw"] }
