[package]
name        = "ozma-mesh"
version     = "0.1.0"
edition     = "2021"
description = "Ozma mesh networking: WireGuard tunnels + mDNS peer discovery"
license     = "AGPL-3.0-only"

[dependencies]
# WireGuard userspace implementation (Cloudflare boringtun)
boringtun    = { version = "0.6", default-features = false }

# mDNS advertising (_ozma._udp.local)
libmdns      = "0.7"

# Crypto: X25519 key generation for WireGuard
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand         = "0.8"

# Base64 for WireGuard key encoding/decoding
base64       = "0.22"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Logging
tracing      = "0.1"

# Error handling
thiserror    = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
