[package]
name        = "ozma-mesh"
version     = "0.1.0"
edition     = "2021"
description = "WireGuard mesh networking + mDNS peer discovery for ozma nodes"
license     = "AGPL-3.0-only"

[dependencies]
# Userspace WireGuard (Cloudflare boringtun)
boringtun    = { version = "0.6", default-features = false }

# mDNS advertising / browsing (_ozma._udp.local)
libmdns      = "0.7"

# Async runtime
tokio        = { version = "1", features = ["full"] }

# Crypto: X25519 key generation
x25519-dalek = { version = "=2.0.0-rc.3", features = ["static_secrets"] }
rand         = "0.8"

# Base64 for WireGuard key encoding/decoding
base64       = "0.22"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Logging
tracing      = "0.1"

# Error handling
thiserror    = "1"

[dev-dependencies]
tokio              = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
