[package]
name        = "ozma-node"
version     = "0.1.0"
edition     = "2021"
description = "Ozma KVM node agent — UDP HID receiver, HLS server, mDNS, heartbeat"
license     = "AGPL-3.0-only"
authors     = ["Ozma Contributors"]

[[bin]]
name = "ozma-node"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (HLS + REST)
axum        = { version = "0.7", features = ["tokio"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["fs", "trace"] }

# HTTP client (registration + heartbeat)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# mDNS advertisement
mdns-sd = "0.11"

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow    = "1"
thiserror = "1"

# Misc
uuid       = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec", "sync"] }
bytes      = "1"
hostname   = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

# ── cargo-deb metadata ────────────────────────────────────────────────────────
[package.metadata.deb]
name        = "ozma-node"
maintainer  = "Ozma Contributors <hello@ozma.dev>"
copyright   = "2024 Ozma Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
Ozma node agent. Receives HID events over UDP, serves HLS video,
advertises itself via mDNS, and sends heartbeats to the controller."""
depends = "$auto"
section  = "net"
priority = "optional"
assets = [
    ["target/release/ozma-node", "usr/bin/",             "755"],
    ["ozma-node.service",        "lib/systemd/system/",  "644"],
]
systemd-units = { enable = true }
