[package]
name        = "ozma-node"
version     = "0.1.0"
edition     = "2021"
description = "Ozma hardware KVM node — mDNS advertisement, controller registration, UAC2 audio bridge"

[[bin]]
name = "ozma-node"
path = "src/main.rs"

[dependencies]
# Workspace-shared
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
usb-gadget         = { workspace = true }
alsa               = { workspace = true }

[features]
# Enable to compile without a real ConfigFS/USB gadget subsystem (e.g. CI).
# When set, uac2_active() always returns false without touching the kernel.
stub-gadget = []

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (registration + heartbeat)
reqwest = { version = "0.12", features = ["json"] }

# mDNS advertisement
libmdns = "0.9"

# Networking helpers
local-ip-address = "0.6"
hostname         = "0.4"

[lib]
name = "ozma_node"
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true }
