[package]
name        = "ozma-pipewire"
version     = "0.1.0"
edition     = "2021"
description = "PipeWire audio routing for the Ozma agent (Linux) with CPAL fallback (Windows/macOS)"
license     = "AGPL-3.0-only"

[features]
default = []

[dependencies]
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire     = { version = "0.9.2" }
libc         = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal         = { version = "0.15", optional = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
