[package]
name        = "ozma-proto"
version     = "0.1.0"
edition     = "2021"
description = "Shared wire-format types for ozma: HID reports and VBAN audio frames."

[dependencies]
serde    = { version = "1", features = ["derive"] }
zerocopy = { version = "0.7", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
