[package]
name    = "ozma-softnode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ozma-softnode"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
ozma-proto         = { path = "../ozma-proto" }
ozma-mesh          = { path = "../ozma-mesh" }
ozma-crypto        = { path = "../ozma-crypto" }
