[package]
name        = "ozma-softnode"
version     = "0.1.0"
edition     = "2021"
description = "Ozma Virtual Node — auto-discover QEMU/KVM/Proxmox VMs and manage one softnode per VM"
license     = "AGPL-3.0-only"

[[bin]]
name = "ozma-virtual-node"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow             = { workspace = true }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
clap               = { version = "4", features = ["derive"] }
glob               = "0.3"
ozma-proto         = { path = "../ozma-proto" }
ozma-mesh          = { path = "../ozma-mesh" }
ozma-crypto        = { path = "../ozma-crypto" }
