[package]
name        = "ozma-softnode"
version     = "0.1.0"
edition     = "2021"
description = "Ozma Virtual Node — auto-discover QEMU/KVM/Proxmox VMs and manage one softnode per VM"
license     = "AGPL-3.0-only"

[[bin]]
name = "ozma-virtual-node"
path = "src/main.rs"

[[bin]]
name = "ozma-meeting-detect"
path = "src/meeting_main.rs"

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow             = { workspace = true }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
clap               = { version = "4", features = ["derive"] }
glob               = "0.3"
# Add dependencies needed for softnode functionality
# zeroconf          = "0.7"          # for mDNS
# evdev             = "0.11"          # for evdev input
# rumqttc           = "0.24"          # for MQTT if needed
ozma-proto         = { path = "../ozma-proto" }
ozma-mesh          = { path = "../ozma-mesh" }
ozma-crypto        = { path = "../ozma-crypto" }

# Meeting detection
sysinfo    = { version = "0.30", default-features = false, features = ["system"] }
icalendar  = "0.15"
chrono     = { version = "0.4", features = ["serde"] }
uuid       = { version = "1", features = ["v4"] }
